--- a/templates/melon_details.html
+++ b/templates/melon_details.html
@@ -14,9 +14,10 @@
             <div class="well">
                 <h3>Price per melon</h3>
                 <p> {{ display_melon.price_str() }} </p>
-                <a class="btn btn-primary" href="/add_to_cart/{{ display_melon.id }}">
+                <form action="/add_to_cart/{{ display_melon.id }}" class="btn btn-primary">
+                    <input type="hidden" name="add-to-cart" id="add-to-cart" >
                     Add to Cart
-                </a>
+                </form>
             </div>
         </div>
     </div>
